--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,119 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.wrapper {
+  padding: 3rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper__board {
+  display: flex;
+  flex-direction: column;
+}
+
+.board {
+  display: grid;
+  max-width: 500px;
+}
+
+.tile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: orange;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+  font-weight: 600;
+}
+
+.tile__bg {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #000;
+}
+
+.empty {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  overflow: hidden;
+  border: 1px solid #fff;
+}
+
+.reset {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: orange;
+  color: #fff;
+  font-weight: 600;
+}
+
+.file_input {
+  position: fixed;
+  display: block;
+  width: 1px;
+  height: 1px;
+  top: -110%;
+}
+
+.wrapper__buttons {
+  margin: 3rem 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn {
+  border-radius: 12px;
+  font-size: 16px;
+  padding: 8px 16px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.btn__action {
+  background-color: tomato;
+  border: 1px solid tomato;
+  box-shadow: 0px 0px 8px 2px rgba(255, 99, 71, 0.3);
+  color: #fff;
+  font-weight: 600;
+}
+
+.btn__delete {
+  background-color: white;
+  border: 1px solid gray;
+  padding: 6px 12px;
+  font-size: 12px;
 }
