--- a/src/App.css
+++ b/src/App.css
@@ -48,16 +48,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .wrapper__board {
   display: flex;
   flex-direction: column;
+  padding: 1rem;
 }
 
 .board {
   display: grid;
-  max-width: 500px;
 }
 
 .tile {
